--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/protected/servicios/servicio"
+    "app/protected/servicios/servicio",
+    "app/protected/documentos"
   ],
   "exclude": [
     "node_modules"
